--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap" rel="stylesheet">
 
+  <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
